initial project version

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
+<body class="hold-transition skin-blue sidebar-mini">
+  <!-- 加载完所有依赖模块，在index页面 寻找 AppModule中（bootstrap属性）指定的主组件 的 css选择器app-root，
+    用app-root模板的内容替换app-root标签  -->
   <app-root></app-root>
 </body>
 </html>
